--- a/src/components/WithoutLogin.css
+++ b/src/components/WithoutLogin.css
@@ -1,15 +1,26 @@
-.noteIcon:hover {
+.btncss {
+    border: none;
+    color: #fff;
+    font-size: 15px;
+    background-color: #19376D;
+    border-radius: 5px;
+    position: relative;
+    box-sizing: border-box;
+    transition: all 500ms ease;
+    font-weight: 500;
+}
+
+.btncss:hover {
     -webkit-transform: scale(1.15);
     -ms-transform: scale(1.15);
     transform: scale(1.15);
     background-color: #19376D;
-    border-radius: 50%;
-    padding: 0.3rem;
-    color: white;
 }
 
-.notecard {
-    background: white;
+.rotate {
+    height: 170px;
+    width: 340px;
+    background: #b5ddeb;
     border-radius: 20px;
     margin: 10px;
     transition: all ease 0.2s;
@@ -18,7 +29,11 @@
     padding-bottom: 10px;
 }
 
-.notecard:hover {
+.rotate:hover {
     transform: translateY(-5px);
     box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+}
+
+i{
+    color: #0B2447;
 }
