added multi language and styles

--- a/src/components/Account.css
+++ b/src/components/Account.css
@@ -63,16 +63,22 @@
     padding-bottom: 10px;
 }
 
-.deactbtn{
+.actbtncss {
+    border: none;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 5px;
+    position: relative;
+    box-sizing: border-box;
+    transition: all 500ms ease;
     background-color: #19376D;
-    border-color: #19376D;
-}
-
-.deactbtn:hover{
-    -webkit-transform: scale(1.15);
-    -ms-transform: scale(1.15);
-    transform: scale(1.15);
+  }
+  
+  .actbtncss:hover {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
     background-color: #19376D;
-    border-color: #19376D;
     color: white;
-}
+  }
+  
