--- a/src/components/NoteItem.css
+++ b/src/components/NoteItem.css
@@ -1,14 +1,5 @@
-.noteIcon:hover {
-    -webkit-transform: scale(1.15);
-    -ms-transform: scale(1.15);
-    transform: scale(1.15);
-    background-color: #19376D;
-    border-radius: 50%;
-    padding: 0.3rem;
-    color: white;
-}
-
 .notecard {
+    overflow-y: hidden;
     background: white;
     border-radius: 20px;
     margin: 10px;
@@ -22,3 +13,12 @@
     transform: translateY(-5px);
     box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
 }
+
+.dropdown-item:hover{
+    background-color: #A5D7E8;
+}
+
+.dropdown-item:active{
+    color:rgba(0, 0, 0, 0.5);
+}
+
